apps/grafana/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route
  namespace: grafana
spec:
  parentRefs:
    - name: ingress-gateway
      namespace: cluster-gateway
      sectionName: grafana-https  
  hostnames:
    - "grafana.hoareau-marion.eu"
  rules:
    - backendRefs:
        - name: grafana
          port: 3000
